# slavbor-core-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements.txt  tox.ini  wait-for-db.sh
.github/workflows/: check-source-branch.yml  main.yml
app/: constants.py  main.py
app/auth/: endpoints.py  schemas.py  services.py
app/auth/utils/: auth_deps.py  pwd_utils.py  token_utils.py  twofa_utils.py
app/core/: dependencies.py  repository.py
app/endpoints/: ping.py
app/exceptions/: __init__.py  auth_exceptions.py  custom_exceptions.py  race_exceptions.py  token_exceptions.py  user_exceptions.py
app/middleware/: __init__.py  config.py  error_handler.py  logging.py  rate_limit.py  request_id.py  security.py  timing.py  token_refresh.py  utils.py
app/models/: __init__.py  ability_model.py  article_model.py  article_tag_model.py  character_model.py  charcter_game_stats_model.py  class_model.py  entity_ability.py  faction_history_model.py  faction_model.py  location_model.py  race_model.py  user_model.py
app/ping/: endpoints.py
app/races/: endpoints.py  repository.py  schemas.py  services.py  utils.py
app/registration/: endpoints.py  repository.py  schemas.py  services.py
app/settings/: __init__.py  base.py  local.py  prod.py  test.py
app/users/: endpoints.py  exceptions.py  repository.py  schemas.py  service.py  services.py
app/utils/: auth.py
migrations/: env.py
migrations/versions/: 0001_install_extensions.py  15f5f15641e8_add_2fa_fields_to_user.py  3c77983469e3_initial_migration.py  3d6b77010d1b_remove_useless_index.py  5fd1788d0331_add_new_tablesd.py  6a1f35242e5b_refactoring_models.py  8f53ea94b63d_fix_foreign_key_constraints_with_set_.py  9f03f1e703a4_remove_useless_fields_from_models.py  d0b85052499a_add_admin.py  dba07ba91bdc_add_new_models_ability_and_class.py
tests/: conftest.py
tests/test_db/: test_db_connection.py
tests/test_endpoints/: test_ping_api.py
tests/test_ping/: test_ping_api.py
tests/test_race/: test_race_api.py  test_race_repo.py  test_race_services.py  test_race_utils.py
